# linear-tracker-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  example.env  pyproject.toml
.github/workflows/: ci.yml
linear_bot/: config.py  linear.py  main.py  notifier.py  reports.py  scheduler.py
linear_bot/handlers/: __init__.py  commands.py  personal.py  reports.py  start.py
linear_bot/utils/: group_guard.py
