[tool.poetry]
name = "linear-bot"
version = "0.1.0"
description = "Telegram bot for Linear notifications and reports"
authors = ["HM Core"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
aiogram = "^3.13.1"
httpx = "^0.28.1"
apscheduler = "^3.10.4"
pytz = "^2026.1"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
