[project]
name = "linear-bot"
version = "0.1.0"
description = "Telegram bot for Linear notifications and reports"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram>=3.13.1",
    "httpx>=0.28.1",
    "apscheduler>=3.10.4",
    "pytz>=2025.2",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = ["ruff>=0.12.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linear_bot"]
